Corrijo errores sobre el refresh y access tokens. Reconfiguro cors en SecurityConfig.

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -34,6 +34,11 @@
       "name": "jwt.expiration-ms",
       "type": "java.lang.Integer",
       "description": "JWT Expiration Time in Miliseconds"
+    },
+    {
+      "name": "frontend.origin",
+      "type": "java.lang.String",
+      "description": "Frontend Origin"
     }
   ]
 }
